chore: fixed user info on mobile

--- a/client/src/theme/material/mat-dialog.scss
+++ b/client/src/theme/material/mat-dialog.scss
@@ -24,7 +24,7 @@
 	}
 
 	.mat-mdc-dialog-container {
-		height: 99vh !important;
+		height: 100vh !important;
 		width: 100vw !important;
 
 		@screen md {
@@ -57,7 +57,8 @@
 	}
 
 	.mat-mdc-dialog-container {
-		height: 98vh !important;
+		height: 100vh !important;
+		width: 100vw !important;
 
 		@screen sm {
 			height: auto !important;
